1998-09-04  Roland McGrath  <roland@baalperazim.frob.com>

	* devio.c: Add #undef's for B19200, B38400, B57600, B115200, in case
	they are defined in <device/tty_status.h> too.

1998-07-20  Roland McGrath  <roland@baalperazim.frob.com>

	* users.c: Include <hurd/fshelp.h> for fshelp_isowner decl.

	* term.h (clear_queue): Change return type to void.

Wed Aug 20 14:07:35 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* main.c (main): New args for
	ports_manage_port_operations_multithread.

Mon Jun  9 12:19:51 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* users.c (trivfs_S_file_chmod): Fix typo.

Tue May 27 12:04:00 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* users.c (trivfs_S_file_chmod): Turn off S_ISPARE too.

Fri Feb 21 13:17:48 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* users.c (open_hook): Add OPEN_COUNT hack to try and detect lossage.

Thu Feb 20 02:25:29 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (main): Initialize TTY_CLASS & PTY_CLASS too instead of
	doing TTY_CNTL_CLASS & PTY_CNTL_CLASS twice.

Wed Feb 19 13:10:47 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (trivfs_protid_portclasses, trivfs_protid_nportclasses,
	trivfs_cntl_portclasses, trivfs_cntl_nportclasses): Variables removed.
	(main): Don't set port class/bucket variables, use
	trivfs_add_{protid,control}_port_class instead.

	* Makefile (HURDLIBS): Add iohelp & shouldbeinlibc.

Thu Dec 12 18:33:52 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (main): Add S_IROOT to TERM_MODE.
	* users.c (trivfs_S_file_chmod): Turn off S_ITRANS bits, and turn
	on S_IROOT in TERM_MODE.

Sat Nov 23 16:28:36 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* users.c: Include <hurd/iohelp.h>.
	(trivfs_S_file_chmod): Bother to fill in ST.

Mon Nov 18 18:16:29 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* users.c (trivfs_modify_stat): Omit pointless assignment.

Fri Nov 15 17:37:12 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
